# slider-captcha-match

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt
src/: __init__.py  requirements.txt  setup.py  slide_captcha_match.py  slider_captcha_match.py
src/slide_match/: __init__.py  slide_match.py
src/test/: test_slide_match.py
tests/: test_slide_match.py  test_slider_match.py
