[tool.poetry]
name = "slider-captcha-match"
version = "1.0.2"
description = "Slider Captcha Match 是一个基于 Python 和 OpenCV 的滑块验证码匹配工具，旨在通过对比滑块和背景图像来计算滑块的正确偏移量。该项目主要用于验证图像处理和匹配算法。"
authors = ["ityangs <ityangs@163.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "slide_match", from = "src" }
]
include = ["src/data/*"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
opencv-python = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
